k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: notesapp
spec:
  type: NodePort  # เปลี่ยนจาก ClusterIP
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001  # เพิ่มเลขนี้เข้าไปตามเกณฑ์คะแนน
